# ClineFinance

./: .clinerules  .gitignore  CONTRIBUTING.md  LICENSE  README.md  install.sh  pyproject.toml  requirements.txt  setup.py
src/cline_finance/: __init__.py  constants.py  server.py
src/cline_finance/core/: __init__.py  chart_generator.py  memory_manager.py  portfolio_manager.py  settings_manager.py
src/cline_finance/tools/: __init__.py  analyst.py  economic.py  fx.py  market.py  memory.py  news.py  portfolio.py  quotes.py  settings.py
workflows/: analysis.md  ask.md  charts.md  digest.md  economy.md  market.md  portfolio.md  rebalance.md  risk.md
